# djaodjin-saas

./: .gitignore  .readthedocs.yaml  LICENSE  LICENSE.txt  Makefile  README.md  changelog  manage.py  pyproject.toml  requirements.txt  setup.py
docs/: api.rst  backends.rst  conf.py  extensions.rst  getting-started.rst  index.rst  ledger.rst  metrics.rst  models.rst  orders.rst  pages.rst  periodic-tasks.rst  pricing.rst  relations.rst  security.rst  subscriptions.rst  views.rst
saas/: __init__.py  admin.py  cart.py  charge.py  compat.py  decorators.py  docs.py  extras.py  filters.py  forms.py  helpers.py  humanize.py  ledger.py  managers.py  mixins.py  models.py  pagination.py  renewals.py  settings.py  signals.py  tests.py  utils.py
saas/api/: accounts.py  agreements.py  backend.py  balances.py  billing.py  charges.py  coupons.py  federations.py  metrics.py  organizations.py  plans.py  renewals.py  roles.py  serializers.py  serializers_overrides.py  subscriptions.py  transactions.py  users.py
saas/backends/: __init__.py  fake_processor.py  flutterwave_processor.py  razorpay_processor.py  stripe_processor.py  stripe_processor_hook.py  stripe_processor_views.py  urls.py
saas/fixtures/: initial_data.json  saas_data.json  test_data.json  test_metrics.json  test_organization.json
saas/managers/: metrics.py
saas/metrics/: base.py  subscriptions.py  transactions.py
saas/migrations/: 0001_initial.py  0002_auto_20161126_2248.py  0002_auto__add_plan__add_field_organization_belongs.py  0003_auto.py  0003_balanceline_is_positive.py  0004_auto_20161221_1944.py  0004_auto__add_cartitem__add_unique_cartitem_user_customer__add_coupon__del.py  0005_role_extra.py  0006_0_3_0.py  0006_auto_20170923_1309.py  0007_0_3_3.py  0007_0_3_3_dev.py  0007_auto_20180508_0840.py  0008_0_3_4.py  0008_0_3_4_dev.py  0008_auto_20180907_1031.py  0009_0_3_5.py  0009_auto_20181210_1234.py  0010_0_4_0.py  0010_0_4_0_dev.py  (+14 more)
testsite/: authentication.py  context_processors.py  jinja2.py  package.json  requirements-legacy.txt  requirements.txt  settings.py  signals.py  urls.py  views.py  wsgi.py
(+320 files in other folders)
